Thu Jan 03 11:15:40 2002  George Lebl <jirka@5z.com>

	* gnome-program.[ch]:  Perform some garbage collection: Remove
	  module-info and modules properties, they were not implemented
	  and were not implementable, nor usable, nor used.  Remove
	  gnome_program_get_invocation_name and
	  gnome_program_get_short_invocation_name since those were not
	  implemented either.  Add documentations trings to all properties.
	  Remove construct only restriction from the app prefix properties,
	  since it is not required and is in fact not used during
	  construction.

2002-01-03  Anders Carlsson  <andersca@gnu.org>

	* gnome-program.c (gnome_program_locate_file): Plug leak.

Wed Dec 26 18:10:32 2001  George Lebl <jirka@5z.com>

	* Makefile.am, gnome-url.c: compile with G_DISABLE_DEPRECATED, yay

2001-12-14  Josh Barrow  <drleary@mac.com>

	* Makefile.am:
	Remove all talk of gconf and schemas and whatnot.
	libgnome.schemas no longer lives here.

2001-12-11  Anders Carlsson  <andersca@gnu.org>

	* gnome-marshal.list: Remove.

	* gnome-marshal-main.c: Remove.

	* Makefile.am: Remove references to gnome-marshal.

	* libgnome.h: Don't include gnome-marshal.h

2001-12-11  Michael Meeks  <michael@ximian.com>

	* Makefile.am: add deps info for the built files.

2001-12-08  Richard Hestilow  <hestilow@ximian.com>

	* libgnome.schemas: Add a couple of settings for wm-properties
	and gnome-wm to share.

2001-12-07  ERDI Gergo  <cactus@cactus.rulez.org>

	* gnome-program.h: Removed buggy buggy BUGGY
	program_invocation_name public variable. If you've used it in your
	code, use g_get_prgname from Glib instead.

2001-12-04  Richard Hestilow  <hestilow@ximian.com>

	* gnome-exec.c (gnome_prepend_terminal_to_vector): Don't
	double-free terminal.
	
	* gnome-url.c (gnome_url_show): Wrap execution in "/bin/sh -c ...".
	Also, return ret, not hard-coded TRUE.

	* libgnome.schemas: Revamp to better fit
	default-applications-properties. Also, remove UI settings, will