@@ -39,6 +39,7 @@
 
 #ifdef HAVE_ESD
 static char *esound_hostname = NULL;
+static gboolean esound_hostname_null_ok = FALSE;
 static int gnome_sound_connection = -1;
 #endif
 
@@ -299,11 +300,12 @@ static gboolean
 use_sound (void)
 {
   if (gnome_sound_connection == -1){
-    if (esound_hostname){
+    if (esound_hostname || esound_hostname_null_ok){
       gnome_sound_connection = esd_open_sound (esound_hostname);
       if (gnome_sound_connection == -1){
 	g_free (esound_hostname);
 	esound_hostname = NULL;
+	esound_hostname_null_ok = FALSE;
 	return FALSE;
       }
     }
@@ -504,7 +506,10 @@ gnome_sound_init(const char *hostname)
 #ifdef HAVE_ESD
 	srand(time(NULL));
 	g_free (esound_hostname);
-	esound_hostname = g_strdup (hostname);
+	if (hostname)
+		esound_hostname = g_strdup (hostname);
+	else
+		esound_hostname_null_ok = TRUE;
 #endif
 }
 
